OpenDNSSEC 2.1.13 - 2023-06-26

* Emit warning when using ods-kaspcheck for RFC 5155
* Fix concurrent usage of command line.
* When using "keep" soa numbering policy mode and the input zone isn't
  available, change from exponential back-off to retry upon next resign
  interval and only emit a warning, unless this occurs a second time.

OpenDNSSEC 2.1.12 - 2022-11-08

* Ensure debug symbols on RPM-style builds.
* Bug fix that prevented restoring state from when salt length was zero.
* Bug fix for enforcer daemon crash after deleting key on some systems.

OpenDNSSEC 2.1.11 - 2022-09-17

* Improper re-use of already used keys when using <SharedKeys/> as
  a consequence of previous bug in 2.1.6
* Improved reporting upon segmentation faults or similar aborts.
* Fix for migration to resalt of length 0.
* Fix for upstream nameserver, implementing IXFR but without support
  for IXFR for that specific zone and responding without AXFR.
* Degraded log message key_update_failed because this action is retried.

OpenDNSSEC 2.1.10 - 2021-09-10

* OPENDNSSEC-957: Fix exit code signer daemon to not always report failure.
* OPENDNSSEC-958: Fix immediate resalting after migration from 1.4.
* OPENDNSSEC-959: Emit warning on ods-kaspcheck for NSEC iteration count
  that is deemed too high.
* SUPPORT-265: Resolve conflict when deleting keys from HSM whilst
  also performing step in key roll process.  Typically a message
  "key_data_update failed" is present in logs.
* Provided RedHat/CentOS spec file in contrib directory.

OpenDNSSEC 2.1.9 - 2021-05-03

* OPENDNSSEC-955: Prevent concurrency between C_Login/C_OpenSession and
  C_FindObject in PKCS#11 operations as some HSMs do not like this and
  the key may (transiently) not be available.
* OPENDNSSEC-956: Harden the signing procedure to still sign zones for
  which there are unused keys specified in the signconf.  These are
  included by the enforcer because there may be (outdated) signatures